# nss-plugin-example

./: CMakeLists.txt  README.md  Vagrantfile  install-gdbus-codegen.sh  install-sdbus.sh  patch-nsswitch.sh  reload-dbus-cache.sh
cmake-modules/: GenerateStub.cmake
dbus-service/: CMakeLists.txt  com.example.EchoService.conf  main.cpp
nss-plugin/: CMakeLists.txt  helpers.h  lib.c
userdb-client/: CMakeLists.txt  client.c  client.h  main.c
userdb-service/: CMakeLists.txt  com.example.UserDb.xml  main.cpp
